实现文档补充

--- a/设计文档/files/实现文档.md
+++ b/设计文档/files/实现文档.md
@@ -461,7 +461,27 @@ def login(request):
         return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
 ```
 
-### 3.7.2 帖子管理
+3. 重置密码
+* **涉及的基本表**：`User`
+* **过程描述**：检查用户是否存在，如果存在则将用户的密码重置为新密码，否则返回错误信息。
+```python
+def resetPassword(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        user_id=int(body.get('id'))
+        user=User.objects.get(user_id=user_id)
+        old_password=body.get('oldpassword')
+        new_password=body.get('password')
+        if user.password!=old_password:
+            return JsonResponse({'code': -1, 'message': '密码错误'})
+        user.password=new_password
+        user.save()
+        return JsonResponse({'code': 0})
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+### 3.7.2 帖子广场管理
 1. 发帖
 
 * **涉及的基本表**：`Post`，`PostSubject`
@@ -687,84 +707,6 @@ def getPosts(request):
                     if request_query in long_str:
                         matching_posts.append(post)
                 if user.identity != 0:
-                    print(post.user_id.identity)
-                    posts = [post for post in matching_posts if post.is_completed and post.user_id.identity == filter_id and post.is_approved]
-                else:
-                    posts = [post for post in matching_posts if post.is_completed and not post.is_approved]
-            
-            return_posts=[]
-            for post in posts:
-                user=post.user_id
-                now = datetime.now(pytz.timezone('Asia/Shanghai'))
-                post_date = post.postDate.astimezone(pytz.timezone('Asia/Shanghai'))
-                time_diff = now - post_date
-                if time_diff < timedelta(hours=24):
-                    date_display = f"{time_diff.seconds // 3600}小时前"
-                elif time_diff < timedelta(days=3):
-                    date_display = f"{time_diff.days}天前"
-                else:
-                    date_display = post_date.strftime("%Y-%m-%d")
-                return_subject_lines=PostSubject.objects.filter(post_id=post)
-                returnSubjects=[]
-                for subject in return_subject_lines:
-                    returnSubjects.append(subject.subject)
-                location=post.location.strip('"')
-                location=json.loads(location.replace("'",'"'))
-                location=location[0]
-                return_posts.append({
-                    'id':str(post.post_id),
-                    'title':post.title,
-                    'tags':returnSubjects,
-                    'content':post.content,
-                    'author':user.username,
-                    'authorId':user.user_id,
-                    'date':date_display,
-                    'location':location,
-                })
-            result={'posts':return_posts[start:end],'total':len(posts)}
-            return JsonResponse(result)
-        except User.DoesNotExist:
-            raise Exception("用户不存在")
-    else:
-        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})@csrf_exempt
-def getPosts(request):
-    if request.method == 'GET':
-        request_id=int(request.GET.get('id'))
-        request_page=int(request.GET.get('page'))
-        request_query=request.GET.get('query')
-        start=(request_page-1)*10
-        end=request_page*10
-        returnSubjects=[]
-        user=User.objects.get(user_id=request_id)
-        try:
-            if user.identity==1:
-                filter_id=2
-            else:
-                filter_id=1
-            
-            if request_query=="":
-                if user.identity!=0:
-                    posts=Post.objects.filter(is_completed=True,user_id__identity=filter_id,is_approved=True)
-                else:
-                    posts=Post.objects.filter(is_completed=True,is_approved=False)
-            else:
-                all_posts = Post.objects.all()
-                matching_posts = []
-                for post in all_posts:
-                    subjects=PostSubject.objects.filter(post_id=post).values_list('subject', flat=True)
-                    subjects_str = ' '.join(subjects)
-                    username_str = post.user_id.username
-                    title_str = post.title
-                    content_str = post.content
-                    location_str = post.location.strip('"')
-                    location_list = json.loads(location_str.replace("'", '"'))
-                    location_str = ' '.join(location_list) if isinstance(location_list, list) else location_str
-                    long_str = f"{subjects_str} {username_str} {title_str} {content_str} {location_str}".lower()
-                    
-                    request_query = request_query.lower()
-                    if request_query in long_str:
-                        matching_posts.append(post)
-                if user.identity != 0:
                     posts = [post for post in matching_posts if post.is_completed and post.user_id.identity == filter_id and post.is_approved]
                 else:
                     posts = [post for post in matching_posts if post.is_completed and not post.is_approved]
@@ -838,4 +780,765 @@ def getPost(request):
         except Post.DoesNotExist:
             return JsonResponse({'code': -1, 'message': '帖子不存在'})
 ```
+
+### 3.7.3 师生个人信息管理
+1. 更新学生信息
+* **涉及的基本表**：`Student`
+* **过程描述**：更新学生的个人信息。
+```python
+@csrf_exempt
+def updateStudentInfo(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        request_id=int(body.get('id'))
+        grade = body.get('data').get('grade')
+        gender = body.get('data').get('gender')
+        age=body.get('data').get('age')
+        email=body.get('data').get('email')
+        telephone=body.get('data').get('telephone')
+        address=body.get('data').get('address')
+        intro=body.get('data').get('intro')
+        personalSignature=body.get('data').get('personalSignature')
+
+        user=User.objects.get(user_id=request_id)
+        student=Student.objects.get(user_id=user)
+        student.grade=grade
+        student.gender=gender
+        student.age=age
+        student.email=email
+        student.telephone=telephone
+        student.address=address
+        student.intro=intro
+        student.personalSignature=personalSignature
+        student.save()
+
+        result={'data':{}}
+        result['code'] = 0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+2. 获取学生信息
+* **涉及的基本表**：`Student`
+* **过程描述**：获取学生的个人信息。
+```python
+@csrf_exempt
+def getStudentInfo(request):
+    if request.method == 'GET':
+        request_id=int(request.GET.get('id'))
+        result={'data':{}}
+        result['code'] = 0
+        user=User.objects.get(user_id=request_id)
+        student=Student.objects.get(user_id=user)
+        result['data']['name']=user.username
+        result['data']['email']=student.email
+        result['data']['telephone']=student.telephone
+        result['data']['address']=student.address
+        result['data']['personalSignature']=student.personalSignature
+        result['data']['intro']=student.intro
+        result['data']['age']=student.age
+        result['data']['gender']=student.gender
+        result['data']['grade']=student.grade
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+3. 更新家教信息
+* **涉及的基本表**：`Tutor`
+* **过程描述**：更新家教的个人信息。
+```python
+@csrf_exempt
+@csrf_exempt
+def updateTeacherInfo(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        request_id=int(body.get('id'))
+        degree=body.get('data').get('degree')
+        gender=body.get('data').get('gender')
+        age=body.get('data').get('age')
+        email=body.get('data').get('email')
+        telephone=body.get('data').get('telephone')
+        address=body.get('data').get('address')
+        intro=body.get('data').get('intro')
+        personalSignature=body.get('data').get('personalSignature')
+
+        user=User.objects.get(user_id=request_id)
+        tutor=Tutor.objects.get(user_id=user)
+        tutor.degree=degree
+        tutor.gender=gender
+        tutor.age=age
+        tutor.email=email
+        tutor.telephone=telephone
+        tutor.address=address
+        tutor.intro=intro
+        tutor.personalSignature=personalSignature
+        tutor.save()
+
+        result={'data':{}}
+        result['code'] = 0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+4. 获取家教信息
+* **涉及的基本表**：`Tutor`
+* **过程描述**：获取家教的个人信息。注意在评论区需要获取评论学生的头像，如果学生没有头像则使用默认头像。
+```python
+@csrf_exempt
+def getTeacherInfo(request):
+    if request.method == 'GET':
+        request_id=int(request.GET.get('id'))
+
+        result={'data':{}}
+        result['code'] = 0
+        user=User.objects.get(user_id=request_id)
+        tutor=Tutor.objects.get(user_id=user)
+        result['data']['name']=user.username
+        result['data']['email']=tutor.email
+        result['data']['telephone']=tutor.telephone
+        result['data']['address']=tutor.address
+        result['data']['personalSignature']=tutor.personalSignature
+        result['data']['intro']=tutor.intro
+        result['data']['gender']=tutor.gender
+        result['data']['age']=tutor.age
+        result['data']['degree']=tutor.degree
+        result['data']['rate']=round(tutor.rate,1)
+        result['data']['rateNum']=tutor.rateNum
+        comments=Review.objects.filter(tutor_id=user)
+        return_comments=[]
+        for comment in comments:
+            return_comments.append({
+                'id':str(comment.review_id),
+                'authorName':comment.student_id.username,
+                'rating':comment.rating,
+                'content':comment.content,
+                'date':comment.date,
+                'avatar':comment.student_id.avatar if comment.student_id.avatar else 'http://120.46.1.4:9000/zxb/png/Akkarin.png',
+            })
+        result['data']['comments']=return_comments
+        print(result)
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+5. 更新头像
+* **涉及的基本表**：`User`
+* **过程描述**：更新用户的头像。注意为了避免图片重名，我们使用uuid生成唯一文件名，将文件上传至图床后，将访问链接保存至数据库中。
+```python
+def uploadAvatar(request):
+    if request.method == 'POST':
+        id_request=json.loads(request.POST.get('data'))
+        # 使用 request.POST 和 request.FILES 解析 FormData 对象
+        user_id = int(id_request.get('id'))
+        file = request.FILES['file']  # 获取上传的文件
+        file_name = file.name
+        file_type = file_name.split('.')[-1]
+
+        unique_file_name = f"{uuid.uuid4()}.{file_type}"
+
+        try:
+            user = User.objects.get(user_id=user_id)
+        except User.DoesNotExist:
+            return JsonResponse({'code': 1, 'message': '用户不存在'})
+
+        # 使用 MinioClient 上传文件并获取下载链接
+        minio_client = MinioClient()
+        file_data = file.read()
+        try:
+            minio_client.upload_file(file_data, unique_file_name, file_type)
+            download_link = get_download_url(unique_file_name, file_type)
+        except ValueError as e:
+            return JsonResponse({'code': 1, 'message': str(e)})
+
+        # 更新用户头像链接
+        user.avatar = download_link
+        user.save()
+
+        result = {'code': 0, 'message': ''}
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': 1, 'message': '仅支持POST请求'})
+```
+
+6. 获取头像
+* **涉及的基本表**：`User`
+* **过程描述**：获取用户的头像。如果用户没有头像，则使用默认头像。
+```python
+def getAvatar(request):
+    if request.method == 'GET':
+        user_id = int(request.GET.get('id'))
+        try:
+            user = User.objects.get(user_id=user_id)
+        except User.DoesNotExist:
+            return JsonResponse({'code': 1, 'message': '用户不存在'})
+
+        if user.avatar:
+            avatar_url = user.avatar
+        else:
+            avatar_url = 'http://120.46.1.4:9000/zxb/png/Akkarin.png'
+        print(avatar_url)
+        result = {'code': 0, 'avatar': avatar_url}
+        print(result)
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': 1, 'message': '仅支持GET请求'})
+```
+
+
+### 3.7.4 个人工作管理
+1. 获取本人发布的所有帖子
+* **涉及的基本表**：`Post`，`PostSubject`
+* **过程描述**：获取用户发布的所有帖子。注意，有别于帖子广场，未经审核的帖子也会在这里显示。
+```python
+def getUserPosts(request):
+    if request.method == 'GET':
+        request_id=int(request.GET.get('id'))
+        user=User.objects.get(user_id=request_id)
+        posts=Post.objects.filter(user_id=user,is_completed=True)
+
+        return_posts=[]
+        result={}
+        result['code'] = 0
+        for post in posts:
+            return_posts.append({
+                'id':str(post.post_id),
+                'title':post.title,
+                'content':post.content,
+            })
+        result['posts']=return_posts
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+2. 删除自己发布的帖子
+* **涉及的基本表**：`Post`，`PostSubject`
+* **过程描述**：用户可以自行删除自己发布的帖子。
+```python
+def deletePost(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        post_id=int(body.get('postId'))
+        post=Post.objects.get(post_id=post_id)
+        post.delete()
+        result={'data':{}}
+        result['code'] = 0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+3. 家教获取自己的所有学生
+* **涉及的基本表**：`Link`
+* **过程描述**：家教可以获取自己的所有学生。
+```python
+def getStudents(request):
+    if request.method == 'GET':
+        request_id=int(request.GET.get('id'))
+        students=Link.objects.filter(tutor_id=request_id)
+        return_students=[]
+        result={}
+        result['code'] = 0
+        for student in students:
+            return_students.append({
+                'id':str(student.student_id.user_id),
+                'name':student.student_id.username,
+            })
+        result['students']=return_students
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+4. 学生获取自己的家教
+* **涉及的基本表**：`Link`
+* **过程描述**：学生可以获取自己的家教。
+```python
+def getTutors(request):
+    if request.method == 'GET':
+        request_id=int(request.GET.get('id'))
+        tutors=Link.objects.filter(student_id=request_id)
+        return_tutors=[]
+        result={}
+        result['code'] = 0
+        for tutor in tutors:
+            return_tutors.append({
+                'id':str(tutor.tutor_id.user_id),
+                'name':tutor.tutor_id.username,
+            })
+        result['tutors']=return_tutors
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+5. 发送通知
+* **涉及的基本表**：`Notification`
+* **过程描述**：用户在执行相关工作后，会发送信息给涉及到的其他用户。这是一个工具方法，前端并不会直接调用这一api。
+```python
+def sendNotice(user,title,description):
+    notification=Notification(
+        user_id=user,
+        notificationDate=datetime.now(pytz.timezone('Asia/Shanghai')),
+        title=title,
+        description=description,
+        is_read=False,
+        )
+    notification.save()
+```
+
+6. 获取通知
+* **涉及的基本表**：`Notification`
+* **过程描述**：用户可以获取自己的通知。
+```python
+def getNotices(request):
+    if request.method == 'GET':
+        request_id=int(request.GET.get('id'))
+        user=User.objects.get(user_id=request_id)
+        notifications=Notification.objects.filter(user_id=user)
+
+        return_notifications=[]
+        result={'data':{}}
+        result['code'] = 0
+        for notification in notifications:
+            return_notifications.append({
+                'title':notification.title,
+                'description':notification.description,
+            })
+        result['data']['notices']=return_notifications
+        new_len=len(Notification.objects.filter(user_id=user,is_read=False))
+        Notification.objects.filter(user_id=user).update(is_read=True)
+        result['data']['newNum']=new_len
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+7. 完成待办事项以建立师生关系
+* **涉及的基本表**：`Todo`，`Link`
+* **过程描述**：家教和学生通过完成待办事项建立关系。
+```python
+def link(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        tutor_id=int(body.get('teacherId'))
+        student_id=int(body.get('studentId'))
+        tutor=User.objects.get(user_id=tutor_id)
+        student=User.objects.get(user_id=student_id)
+
+        link=Link(tutor_id=tutor,student_id=student)
+        link.save()
+
+        user_id=request.session['user_id']
+        if user_id==tutor_id:
+            sendNotice(student,"招聘成功",f"您正式成为{tutor.username}的学生")
+            todos=Todo.objects.filter(owner_id=tutor,accepter_id=student)
+            for todo in todos:
+                todo.delete()
+        else:
+            sendNotice(tutor,"应聘成功",f"您正式成为{student.username}的家教")
+            todos=Todo.objects.filter(owner_id=student,accepter_id=tutor)
+            for todo in todos:
+                todo.delete()
+
+        result={'data':{}}
+        result['code'] = 0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+8. 拒绝待办事项
+* **涉及的基本表**：`Todo`
+* **过程描述**：家教和学生通过拒绝待办事项拒绝建立关系。
+```python
+def refuseLink(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        tutor_id=int(body.get('teacherId'))
+        student_id=int(body.get('studentId'))
+        tutor=User.objects.get(user_id=tutor_id)
+        student=User.objects.get(user_id=student_id)
+
+        user_id=request.session['user_id']
+        if user_id==tutor_id:
+            sendNotice(student,"招聘失败",f"很抱歉，{tutor.username}未同意您的招聘")
+            todos=Todo.objects.filter(owner_id=tutor,accepter_id=student)
+            for todo in todos:
+                todo.delete()
+        else:
+            sendNotice(tutor,"应聘失败",f"很抱歉，{student.username}未同意您的应聘")
+            todos=Todo.objects.filter(owner_id=student,accepter_id=tutor)
+            for todo in todos:
+                todo.delete()
+
+        result={'data':{}}
+        result['code'] = 0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+9. 取消师生关系
+* **涉及的基本表**：`Link`
+* **过程描述**：家教和学生通过取消师生关系解除关系。
+```python
+def unlink(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        print(body)
+        tutor_id=int(body.get('id'))
+        student_id=int(body.get('studentId'))
+        tutor=User.objects.get(user_id=tutor_id)
+        student=User.objects.get(user_id=student_id)
+
+        link=Link.objects.get(tutor_id=tutor,student_id=student)
+        link.delete()
+
+        user_id=request.session['user_id']
+        if user_id==tutor_id:
+            sendNotice(student,"解除招聘",f"您已经不再是{tutor.username}的学生")
+        else:
+            sendNotice(tutor,"解除应聘",f"您已经不再是{student.username}的家教")
+
+        result={'data':{}}
+        result['code'] = 0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+10.  学生给家教评价
+* **涉及的基本表**：`Review`
+* **过程描述**：学生给家教评价。
+```python
+def submitComment(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        student_id=int(body.get('studentId'))
+        tutor_id=int(body.get('teacherId'))
+        rating=int(body.get('rate'))
+        comment=body.get('comment')
+        user=User.objects.get(user_id=student_id)
+        tutor=User.objects.get(user_id=tutor_id)
+        teacher=Tutor.objects.get(user_id=tutor)
+        if teacher.rateNum!=0:
+            rate_sum=teacher.rate*teacher.rateNum
+        else:
+            rate_sum=0
+        old_review=Review.objects.get(student_id=user,tutor_id=tutor)
+        if old_review:
+            teacher.rateNum-=1
+            rate_sum-=old_review.rating  
+            old_review.delete()
+        review=Review(
+            student_id=user,
+            tutor_id=tutor,
+            rating=rating,
+            content=comment,
+            date=datetime.now(pytz.timezone('Asia/Shanghai')),
+        )
+        review.save()
+
+        sendNotice(tutor,"收到新评价",f"您收到了来自{user.username}的新评价")
+        teacher.rateNum+=1
+        rate_sum+=rating
+        teacher.rate=rate_sum/teacher.rateNum
+        teacher.save()
+        
+        result={'data':{}}
+        result['code'] = 0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'}) 
+```
+
+11.  家教给学生上传学习资料
+* **涉及的基本表**：`StudyMaterial`
+* **过程描述**：家教给学生上传学习资料。为避免重名文件发生覆盖，这里在上传图床前使用uuid生成唯一文件名，然后将文件名和下载链接存入数据库。
+```python
+def submitLearningMaterial(request):
+    if request.method == 'POST':
+        body = json.loads(request.POST.get('data'))
+        tutor_id = int(body.get('id'))
+        student_id = int(body.get('studentId'))
+        file = request.FILES['file']  # 获取上传的文件
+        file_name = file.name
+        file_type = file_name.split('.')[-1]
+        user=User.objects.get(user_id=student_id)
+        tutor=User.objects.get(user_id=tutor_id)
+
+        unique_file_name = f"{uuid.uuid4()}.{file_type}"
+
+        minio = MinioClient()
+        file_data = file.read()
+        minio.upload_file(file_data, unique_file_name, file_type)
+        download_link = get_download_url(unique_file_name, file_type)
+
+        material=StudyMaterial(
+            tutor_id=tutor,
+            student_id=user,
+            file_name=file_name,
+            download_link=download_link,
+            upload_date=datetime.now(pytz.timezone('Asia/Shanghai')),
+        )
+        material.save()
+        sendNotice(user,"收到新学习资料",f"您收到了来自{tutor.username}的新学习资料")
+        result={'data':{}}
+        result['code'] = 0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+12.  学生获取学习资料
+* **涉及的基本表**：`StudyMaterial`
+* **过程描述**：学生获取家教上传的学习资料。
+```python
+def getLearningMaterials(request):
+    if request.method == 'GET':
+        request_id=int(request.GET.get('id'))
+        user=User.objects.get(user_id=request_id)
+        materials=StudyMaterial.objects.filter(student_id=user)
+
+        return_materials=[]
+        result={}
+        result['code'] = 0
+        for material in materials:
+            return_materials.append({
+                'id':str(material.material_id),
+                'filename':material.file_name,
+                'publisher':material.tutor_id.username,
+                'downloadLink':material.download_link,
+                'date':material.upload_date,
+            })
+        result['materials']=return_materials
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+13.  发送待办事项
+* **涉及的基本表**：`Todo`
+* **过程描述**：用户在执行相关工作后，会发送待办事项给涉及到的其他用户。这是一个工具方法，前端并不会直接调用这一api。
+```python
+def sendTodo(user,post,accepter):
+    todo=Todo(
+        owner_id=user,
+        accepter_id=accepter,
+        accept_post_id=post,
+        is_completed=False,
+    )
+    todo.save()
+```
+
+14.  获取待办事项
+* **涉及的基本表**：`Todo`
+* **过程描述**：用户可以获取自己的待办事项。
+```python
+def getTodos(request):
+    if request.method == 'GET':
+        request_id=int(request.GET.get('id'))
+        user=User.objects.get(user_id=request_id)
+        todos=Todo.objects.filter(owner_id=user)
+
+        return_todos=[]
+        result={}
+        result['code'] = 0
+        for todo in todos:
+            return_todos.append({
+                'id':str(todo.todo_id),
+                'postId':str(todo.accept_post_id.post_id),
+                'postTitle':todo.accept_post_id.title,
+                'accepterName':todo.accepter_id.username,
+                'accepterId':str(todo.accepter_id.user_id),
+            })
+        result['todos']=return_todos
+        print(result)
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+15. 获取站点公告
+* **涉及的基本表**：`Announcement`
+* **过程描述**：用户可以获取站点公告。
+```python
+def getAnnouncements(request):
+    if request.method == 'GET':
+        try:
+            return_announcements=[]
+            for announcement in Announcement.objects.all():
+                now = datetime.now(pytz.timezone('Asia/Shanghai'))
+                announcement_date = announcement.announcementDate.astimezone(pytz.timezone('Asia/Shanghai'))
+                time_diff = now - announcement_date
+                if time_diff < timedelta(hours=24):
+                    date_display = f"{time_diff.seconds // 3600}小时前"
+                elif time_diff < timedelta(days=3):
+                    date_display = f"{time_diff.days}天前"
+                else:
+                    date_display = announcement_date.strftime("%Y-%m-%d")
+                return_announcements.append({
+                    'title':announcement.title,
+                    'content':announcement.description,
+                    'date':date_display,
+                })
+            result={'data':{}}
+            result['code'] = 0
+            result['data']['announcements']=return_announcements
+            return JsonResponse(result)
+        except User.DoesNotExist:
+            raise Exception("用户不存在")
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+
+### 3.7.5 管理员事务管理
+1. 获取用户身份
+* **涉及的基本表**：`User`
+* **过程描述**：管理员可以获取用户的身份。
+```python
+def getUserRole(request):
+    if request.method == 'GET':
+        post_id=int(request.GET.get('id'))
+        post=Post.objects.get(post_id=post_id)
+        user=post.user_id
+        result={'data':{}}
+        result['code'] = 0
+        if user.identity==0:
+            raise Exception("管理员不发帖子")
+        elif user.identity==1:
+            result['data']['userRole']="家教"
+        else:
+            result['data']['userRole']="学生"
+        print(result)
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+2. 审核通过帖子
+* **涉及的基本表**：`Post`
+* **过程描述**：管理员可以审核通过帖子。
+```python
+def approvePost(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        print(body)
+        post_id=int(body.get('postId'))
+        post=Post.objects.get(post_id=post_id)
+        post.is_approved=True
+        post.save()
+        sendNotice(post.user_id,"帖子通过审核",f"您的帖子《{post.title}》已通过审核")
+        result={}
+        result['code'] = 0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+3. 审核拒绝帖子
+* **涉及的基本表**：`Post`
+* **过程描述**：管理员可以审核拒绝帖子。
+```python
+def rejectPost(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)5.
+        post_id=int(body.get('postId'))
+        post=Post.objects.get(post_id=post_id)
+        post.delete()
+        sendNotice(post.user_id,"帖子未通过审核",f"您的帖子《{post.title}》未通过审核")
+        result={}
+        result['code'] = 0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+4. 获取所有家教
+* **涉及的基本表**：`Tutor`
+* **过程描述**：管理员可以获取所有家教。
+```python
+def getAllTeachers(request):
+    if request.method == 'GET':
+        teachers=User.objects.filter(identity=1)
+        return_teachers=[]
+        result={}
+        result['code'] = 0
+        for teacher in teachers:
+            return_teachers.append({
+                'id':str(teacher.user_id),
+                'name':teacher.username,
+            })
+        result['teachers']=return_teachers
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+5. 获取所有学生
+* **涉及的基本表**：`Student`
+* **过程描述**：管理员可以获取所有学生。
+```python
+def getAllStudents(request):
+    if request.method == 'GET':
+        students=User.objects.filter(identity=2)
+        return_students=[]
+        result={}
+        result['code'] = 0
+        for student in students:
+            return_students.append({
+                'id':str(student.user_id),
+                'name':student.username,
+            })
+        result['students']=return_students
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+``` 
+
+6. 发表站点公告
+* **涉及的基本表**：`Announcement`
+* **过程描述**：管理员可以发表站点公告。
+```python
+def makeAnnouncement(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        title=body.get('title')
+        content=body.get('content')
+        announcement=Announcement(
+              title=title,
+              description=content,
+              announcementDate=datetime.now(pytz.timezone('Asia/Shanghai')),
+        )
+        announcement.save()
+        result={}
+        result['code']=0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+7. 删除用户
+* **涉及的基本表**：`User`
+* **过程描述**：管理员可以删除用户。
+```python
+def deleteUser(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        user_id=int(body.get('id'))
+        user=User.objects.get(user_id=user_id)
+        user.delete()
+        result={}
+        result['code']=0
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
 
