--- a/设计文档/files/设计文档.md
+++ b/设计文档/files/设计文档.md
@@ -4,7 +4,7 @@
 
 > **加粗**表示主码，*斜体*表示外码
 
-1. User(**user_id**, user_name, password, identity, registration_date)
+1. User(**user_id**, user_name, password, identity, registration_date, avatar)
 2. Student(**user_id**, age, gender, telephone, email, grade, address, intro, personal_signature)
 3. Tutor(**user_id**, age, gender, telephone, email, rate, rate_num, address, intro, personal_signature, degree)
 
