完成系统重难点前端部分

--- a/设计文档/files/实现文档.md
+++ b/设计文档/files/实现文档.md
@@ -927,7 +927,7 @@ def getTeacherInfo(request):
 
 5. 更新头像
 * **涉及的基本表**：`User`
-* **过程描述**：更新用户的头像。注意为了避免图片重名，我们使用uuid生成唯一文件名，将文件上传至图床后，将访问链接保存至数据库中。
+* **过程描述**：更新用户的头像。注意为了避免图片重名，我们使用uuid生成唯一文件名，将文件上传至容器后，将访问链接保存至数据库中。
 ```python
 def uploadAvatar(request):
     if request.method == 'POST':
@@ -1259,7 +1259,7 @@ def submitComment(request):
 
 11.  家教给学生上传学习资料
 * **涉及的基本表**：`StudyMaterial`
-* **过程描述**：家教给学生上传学习资料。为避免重名文件发生覆盖，这里在上传图床前使用uuid生成唯一文件名，然后将文件名和下载链接存入数据库。
+* **过程描述**：家教给学生上传学习资料。为避免重名文件发生覆盖，这里在上传容器前使用uuid生成唯一文件名，然后将文件名和下载链接存入数据库。
 ```python
 def submitLearningMaterial(request):
     if request.method == 'POST':
@@ -1500,7 +1500,7 @@ def getAllStudents(request):
         return JsonResponse(result)
     else:
         return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
-``` 
+```
 
 6. 发表站点公告
 * **涉及的基本表**：`Announcement`
@@ -1540,5 +1540,4 @@ def deleteUser(request):
     else:
         return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
 ```
-
 
